--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-Site under construction, but Ruby says hi!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>EP Sitters - Edison Park Sitters</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header>
+    <h1>EP Sitters</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="schedule.html">Schedule a Sitting</a></li>
+        <li><a href="members.html">Meet the Members</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section class="home">
+      <img src="images/group-photo.jpg" alt="EP Sitters Group Photo" />
+      <h2>Welcome to EP Sitters!</h2>
+      <p>Fun, friendly, and local babysitting services from responsible 6th graders in Edison Park, serving Edison Park, Park Ridge, and Niles.</p>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2025 EP Sitters. All rights reserved.</p>
+  </footer>
+  <script src="script.js"></script>
+</body>
+</html>
