--- a/about.html
+++ b/about.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>About EP Sitters</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us | EP Sitters</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>About EP Sitters</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="schedule.html">Schedule a Sitting</a></li>
-        <li><a href="members.html">Meet the Members</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
-    </nav>
+    <div class="container">
+      <h1>EP Sitters</h1>
+      <nav>
+        <ul class="menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="schedule.html">Schedule a Sitting</a></li>
+          <li><a href="members.html">Meet the Members</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
-  <main>
-    <p>EP Sitters is a group of 6th grade girls from Edison Park who love kids and are experienced with siblings of their own.</p>
+
+  <main class="container">
+    <h2>About EP Sitters</h2>
+    <p>EP Sitters was founded by four responsible and fun-loving 6th grade girls from the Edison Park neighborhood in Chicago. Each of them has younger siblings and knows what it takes to care for and entertain kids of all ages. They provide babysitting services in Edison Park, Park Ridge, and Niles. Parents love the peace of mind that comes with local, trusted sitters who are part of their community.</p>
   </main>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 EP Sitters. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
