--- a/index.html
+++ b/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>EP Sitters - Edison Park Sitters</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>EP Sitters | Edison Park Babysitting</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>EP Sitters</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="schedule.html">Schedule a Sitting</a></li>
-        <li><a href="members.html">Meet the Members</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
-    </nav>
+    <div class="container">
+      <h1>EP Sitters</h1>
+      <nav>
+        <ul class="menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="schedule.html">Schedule a Sitting</a></li>
+          <li><a href="members.html">Meet the Members</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
-  <main>
-    <section class="home">
-      <img src="images/group-photo.jpg" alt="EP Sitters Group Photo" />
+
+  <main class="container">
+    <section id="home">
+      <img src="images/group-photo.jpg" alt="EP Sitters Group Photo" class="hero-image">
       <h2>Welcome to EP Sitters!</h2>
-      <p>Fun, friendly, and local babysitting services from responsible 6th graders in Edison Park, serving Edison Park, Park Ridge, and Niles.</p>
+      <p>EP Sitters is a fun and trustworthy babysitting group run by responsible 6th grade girls from Edison Park. We serve families in Edison Park, Park Ridge, and Niles.</p>
     </section>
   </main>
+
   <footer>
-    <p>&copy; 2025 EP Sitters. All rights reserved.</p>
+    <div class="container">
+      <p>&copy; 2025 EP Sitters. All rights reserved.</p>
+    </div>
   </footer>
-  <script src="script.js"></script>
 </body>
 </html>
