--- a/about.html
+++ b/about.html
@@ -1,36 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us | EP Sitters</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us - EP Sitters</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1>EP Sitters</h1>
-      <nav>
-        <ul class="menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="schedule.html">Schedule a Sitting</a></li>
-          <li><a href="members.html">Meet the Members</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
-  <main class="container">
-    <h2>About EP Sitters</h2>
-    <p>EP Sitters was founded by four responsible and fun-loving 6th grade girls from the Edison Park neighborhood in Chicago. Each of them has younger siblings and knows what it takes to care for and entertain kids of all ages. They provide babysitting services in Edison Park, Park Ridge, and Niles. Parents love the peace of mind that comes with local, trusted sitters who are part of their community.</p>
-  </main>
-
-  <footer>
-    <div class="container">
-      <p>&copy; 2025 EP Sitters. All rights reserved.</p>
-    </div>
-  </footer>
+    <header>
+        <h1>EP Sitters</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="schedule.html">Schedule a Sitting</a></li>
+                <li class="dropdown">
+                    <a href="meet.html">Meet the Members</a>
+                    <div class="dropdown-content">
+                        <a href="ruby.html">Ruby D.</a>
+                        <a href="addy.html">Addy M.</a>
+                        <a href="eloise.html">Eloise S.</a>
+                        <a href="andersen.html">Andersen B.</a>
+                    </div>
+                </li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>About Us</h2>
+            <p>EP Sitters is a group of responsible 6th grade girls offering babysitting services in Edison Park, Park Ridge, and Niles communities.</p>
+            <img src="images/about.jpg" alt="About Us">
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 EP Sitters</p>
+    </footer>
+    <script src="scripts.js"></script>
 </body>
 </html>
