--- a/index.html
+++ b/index.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EP Sitters | Edison Park Babysitting</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EP Sitters</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1>EP Sitters</h1>
-      <nav>
-        <ul class="menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="schedule.html">Schedule a Sitting</a></li>
-          <li><a href="members.html">Meet the Members</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
-  <main class="container">
-    <section id="home">
-      <img src="images/group-photo.jpg" alt="EP Sitters Group Photo" class="hero-image">
-      <h2>Welcome to EP Sitters!</h2>
-      <p>EP Sitters is a fun and trustworthy babysitting group run by responsible 6th grade girls from Edison Park. We serve families in Edison Park, Park Ridge, and Niles.</p>
-    </section>
-  </main>
-
-  <footer>
-    <div class="container">
-      <p>&copy; 2025 EP Sitters. All rights reserved.</p>
-    </div>
-  </footer>
+    <header>
+        <h1>EP Sitters</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="schedule.html">Schedule a Sitting</a></li>
+                <li class="dropdown">
+                    <a href="meet.html">Meet the Members</a>
+                    <div class="dropdown-content">
+                        <a href="ruby.html">Ruby D.</a>
+                        <a href="addy.html">Addy M.</a>
+                        <a href="eloise.html">Eloise S.</a>
+                        <a href="andersen.html">Andersen B.</a>
+                    </div>
+                </li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Welcome to EP Sitters!</h2>
+            <p>Your trusted babysitting service in Edison Park, Park Ridge, and Niles.</p>
+            <img src="images/home.jpg" alt="Babysitting">
+        </>
+    </main>
+    <footer>
+        <p>&copy; 2025 EP Sitters</p>
+    </footer>
+    <script src="scripts.js"></script>
 </body>
 </html>
