--- a/ruby.html
+++ b/ruby.html
@@ -1,1 +1,42 @@
-<h1>Ruby D.</h1><p>Ruby is great with little kids and has a younger brother and sister.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ruby D. - EP Sitters</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>EP Sitters</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="schedule.html">Schedule a Sitting</a></li>
+                <li class="dropdown">
+                    <a href="meet.html">Meet the Members</a>
+                    <div class="dropdown-content">
+                        <a href="ruby.html">Ruby D.</a>
+                        <a href="addy.html">Addy M.</a>
+                        <a href="eloise.html">Eloise S.</a>
+                        <a href="andersen.html">Andersen B.</a>
+                    </div>
+                </li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Meet Ruby D.</h2>
+            <img src="images/ruby.jpg" alt="Ruby D.">
+            <p>Hi, I'm Ruby D.! I'm a 6th grader with a passion for babysitting. I have siblings and love taking care of kids. I'm responsible, fun, and always ready to help!</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 EP Sitters</p>
+    </footer>
+    <script src="scripts.js"></script>
+</body>
+</html>
