--- a/ruby.html
+++ b/ruby.html
@@ -30,7 +30,7 @@
     <main>
         <section>
             <h2>Meet Ruby D.</h2>
-            <img src="images/ruby.jpg" alt="Ruby D.">
+            <img src="images/ruby.jpg" alt="Ruby D." class="responsive-img">
             <p>Hi, I'm Ruby D.! I'm a 6th grader with a passion for babysitting. I have siblings and love taking care of kids. I'm responsible, fun, and always ready to help!</p>
         </section>
     </main>
