--- a/ruby.html
+++ b/ruby.html
@@ -31,7 +31,7 @@
         <section>
             <h2>Meet Ruby D.</h2>
             <img src="images/ruby.jpg" alt="Ruby D." style="max-width: 200px; height: auto;">
-            <p>Hi, I'm Ruby D.! I'm a 6th grader with a passion for babysitting. I have siblings and love taking care of kids. I'm responsible, fun, and always ready to help!</p>
+            <p>I am 12 years old and am in 6th grade. I have 3 brothers (7, 4 and 4) and my dog Rosie. In my free time I like to play softball and draw.  I have been babysitting for about 2 years now and I am babysitter safe. I went to a 4 hour class that taught us how to do CPR, Heimlich, and what to do in case of an emergency. I am a social person and I know how to communicate my thoughts and ideas. I can't wait to meet you!</p>
         </section>
     </main>
     <footer>
