--- a/index2.html
+++ b/index2.html
@@ -1,33 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Happy Hands Babysitting</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>EP Sitters - Edison Park Babysitting</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    .hero {
-      background: url('images/hero.jpg') center/cover no-repeat;
-      height: 80vh;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-    }
-    .hero-overlay {
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 3rem;
-      border-radius: 10px;
-    }
-  </style>
 </head>
 <body>
-
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
     <div class="container">
-      <a class="navbar-brand" href="#">Happy Hands</a>
+      <a class="navbar-brand" href="index.html">EP Sitters</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
         data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -35,82 +18,56 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="members.html">Meet the Members</a></li>
+          <li class="nav-item"><a class="nav-link" href="schedule.html">Schedule a Sitting</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Hero Section -->
-  <header class="hero">
-    <div class="hero-overlay text-white">
-      <h1 class="display-4">Happy Hands Babysitting</h1>
-      <p class="lead">Trusted care for your little ones</p>
-      <a href="#contact" class="btn btn-warning btn-lg mt-3">Book Now</a>
+  <!-- Hero -->
+  <header class="bg-primary text-white text-center py-5">
+    <div class="container">
+      <h1 class="display-4">Welcome to EP Sitters</h1>
+      <p class="lead">Babysitting services in Edison Park, Park Ridge, and Niles, IL</p>
     </div>
   </header>
 
-  <!-- About -->
-  <section id="about" class="py-5">
+  <!-- Pricing Section -->
+  <section class="py-5">
     <div class="container text-center">
-      <h2>About Us</h2>
-      <p class="mt-3">We offer loving, professional babysitting services for children of all ages.
-        Our sitters are CPR certified and have years of experience working with kids.</p>
+      <h2>Our Pricing</h2>
+      <p class="mt-3">$10 for the first child<br>$5 for each additional child</p>
     </div>
   </section>
 
-  <!-- Services -->
-  <section id="services" class="bg-light py-5">
-    <div class="container">
-      <h2 class="text-center mb-4">Our Services</h2>
-      <div class="row g-4">
-        <div class="col-md-3">
-          <div class="card h-100 text-center">
-            <div class="card-body">
-              <h5 class="card-title">Evening Babysitting</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card h-100 text-center">
-            <div class="card-body">
-              <h5 class="card-title">Weekend Care</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card h-100 text-center">
-            <div class="card-body">
-              <h5 class="card-title">Overnight Stays</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card h-100 text-center">
-            <div class="card-body">
-              <h5 class="card-title">Emergency Callouts</h5>
-            </div>
-          </div>
-        </div>
+  <!-- Images Placeholder -->
+  <section class="container text-center py-4">
+    <h2>Our Babysitters</h2>
+    <div class="row g-4 mt-3">
+      <div class="col-6 col-md-3">
+        <img src="images/ruby.jpg" class="img-fluid rounded" alt="Ruby">
+        <p>Ruby D.</p>
       </div>
-    </div>
-  </section>
-
-  <!-- Contact -->
-  <section id="contact" class="py-5">
-    <div class="container text-center">
-      <h2>Contact Us</h2>
-      <p class="mt-3">Email: <a href="mailto:hello@happyhands.com">hello@happyhands.com</a></p>
-      <p>Phone: (123) 456-7890</p>
-      <p>Serving the greater Springfield area</p>
+      <div class="col-6 col-md-3">
+        <img src="images/addy.jpg" class="img-fluid rounded" alt="Addy">
+        <p>Addy M.</p>
+      </div>
+      <div class="col-6 col-md-3">
+        <img src="images/andersen.jpg" class="img-fluid rounded" alt="Andersen">
+        <p>Andersen B.</p>
+      </div>
+      <div class="col-6 col-md-3">
+        <img src="images/eloise.jpg" class="img-fluid rounded" alt="Eloise">
+        <p>Eloise S.</p>
+      </div>
     </div>
   </section>
 
   <!-- Footer -->
   <footer class="bg-dark text-white text-center py-3">
-    <p class="mb-0">&copy; 2025 Happy Hands Babysitting. All rights reserved.</p>
+    <p class="mb-0">&copy; 2025 EP Sitters. All rights reserved.</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
