--- a/eloise.html
+++ b/eloise.html
@@ -1,1 +1,2 @@
-<h1>Eloise S.</h1><p>Eloise enjoys reading stories to kids and has a younger brother.</p>
+<!DOCTYPE html>
+<html><body><h1>Eloise's Bio</h1></body></html>
