--- a/index.html
+++ b/index.html
@@ -1,42 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EP Sitters</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="EP Sitters - Babysitting Service by 6th Grade Girls from Edison Park, IL">
+  <title>EP Sitters - Babysitting Service</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>EP Sitters</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="schedule.html">Schedule a Sitting</a></li>
-                <li class="dropdown">
-                    <a href="meet.html">Meet the Members</a>
-                    <div class="dropdown-content">
-                        <a href="ruby.html">Ruby D.</a>
-                        <a href="addy.html">Addy M.</a>
-                        <a href="eloise.html">Eloise S.</a>
-                        <a href="andersen.html">Andersen B.</a>
-                    </div>
-                </li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <h2>Welcome to EP Sitters!</h2>
-            <p>Your trusted babysitting service in Edison Park, Park Ridge, and Niles.</p>
-            <img src="images/home.jpg" alt="Babysitting">
-        </>
-    </main>
-    <footer>
-        <p>&copy; 2025 EP Sitters</p>
-    </footer>
-    <script src="scripts.js"></script>
+  <h1>Welcome to EP Sitters</h1>
 </body>
 </html>
