--- a/ruby.html
+++ b/ruby.html
@@ -1,42 +1,2 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ruby D. - EP Sitters</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>EP Sitters</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="schedule.html">Schedule a Sitting</a></li>
-                <li class="dropdown">
-                    <a href="meet.html">Meet the Members</a>
-                    <div class="dropdown-content">
-                        <a href="ruby.html">Ruby D.</a>
-                        <a href="addy.html">Addy M.</a>
-                        <a href="eloise.html">Eloise S.</a>
-                        <a href="andersen.html">Andersen B.</a>
-                    </div>
-                </li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <h2>Meet Ruby D.</h2>
-            <img src="images/ruby.jpg" alt="Ruby D." style="max-width: 200px; height: auto;">
-            <p>I am 12 years old and am in 6th grade. I have 3 brothers (7, 4 and 4) and my dog Rosie. In my free time I like to play softball and draw.  I have been babysitting for about 2 years now and I am babysitter safe. I went to a 4 hour class that taught us how to do CPR, Heimlich, and what to do in case of an emergency. I am a social person and I know how to communicate my thoughts and ideas. I can't wait to meet you!</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 EP Sitters</p>
-    </footer>
-    <script src="scripts.js"></script>
-</body>
-</html>
+<html><body><h1>Ruby's Bio</h1></body></html>
