--- a/index.html
+++ b/index.html
@@ -6,8 +6,78 @@
   <meta name="description" content="EP Sitters - Babysitting Service by 6th Grade Girls from Edison Park, IL">
   <title>EP Sitters - Babysitting Service</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body { padding-top: 3rem; }
+    .navbar { margin-bottom: 2rem; }
+    footer { padding: 1rem 0; background-color: #f8f9fa; text-align: center; }
+  </style>
 </head>
 <body>
-  <h1>Welcome to EP Sitters</h1>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="#">EP Sitters</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="#members">Meet the Members</a></li>
+          <li class="nav-item"><a class="nav-link" href="#schedule">Schedule a Sitting</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <main class="container">
+    <section id="home" class="text-center">
+      <h1>Welcome to EP Sitters</h1>
+      <p>Babysitting service for Edison Park by 6th grade girls. $10 for the first kid and $5 for each additional kid.</p>
+      <img src="image-placeholder.jpg" class="img-fluid" alt="Babysitting Image">
+    </section>
+
+    <section id="about" class="mt-5">
+      <h2>About Us</h2>
+      <p>We have been a babysitting club since May of 2025. We are friends and have had experience with kids. We all have siblings and help around the house. We are Straight A students and try our best to please the customers. Welcome to EP Sitters!</p>
+      <p>Contact us at: <a href="mailto:epexample@gmail.com">epexample@gmail.com</a></p>
+    </section>
+
+    <section id="members" class="mt-5">
+      <h2>Meet the Members</h2>
+      <div class="row">
+        <div class="col-md-3"><a href="ruby.html" class="btn btn-primary">Ruby</a></div>
+        <div class="col-md-3"><a href="addy.html" class="btn btn-primary">Addy</a></div>
+        <div class="col-md-3"><a href="eloise.html" class="btn btn-primary">Eloise</a></div>
+        <div class="col-md-3"><a href="andersen.html" class="btn btn-primary">Andersen</a></div>
+      </div>
+    </section>
+
+    <section id="schedule" class="mt-5">
+      <h2>Schedule a Sitting</h2>
+      <p>$10 for the first kid and $5 for each additional kid.</p>
+      <form>
+        <div class="mb-3">
+          <label for="parentName" class="form-label">Parent's Name</label>
+          <input type="text" class="form-control" id="parentName" required>
+        </div>
+        <div class="mb-3">
+          <label for="childrenCount" class="form-label">Number of Children</label>
+          <input type="number" class="form-control" id="childrenCount" required>
+        </div>
+        <div class="mb-3">
+          <label for="scheduleDate" class="form-label">Preferred Date</label>
+          <input type="date" class="form-control" id="scheduleDate" required>
+        </div>
+        <button type="submit" class="btn btn-success">Submit</button>
+      </form>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 EP Sitters</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
