--- a/ruby.html
+++ b/ruby.html
@@ -1,2 +1,16 @@
 <!DOCTYPE html>
-<html><body><h1>Ruby's Bio</h1></body></html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ruby - EP Sitters</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+  <div class="container mt-5">
+    <h1>Ruby</h1>
+    <p>I am 12 years old and am in 6th grade. I have 3 brothers (7, 4, and 4) and my dog Rosie. In my free time, I like to play softball and draw. I have been babysitting for about 2 years now and I am babysitter safe. I went to a 4-hour class that taught us how to do CPR, Heimlich, and what to do in case of an emergency. I am a social person and I know how to communicate my thoughts and ideas. I can't wait to meet you! - Ruby</p>
+    <a href="index.html" class="btn btn-primary">Back to Home</a>
+  </div>
+</body>
+</html>
