--- a/addy.html
+++ b/addy.html
@@ -1,2 +1,16 @@
 <!DOCTYPE html>
-<html><body><h1>Addy's Bio</h1></body></html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Addy - EP Sitters</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+  <div class="container mt-5">
+    <h1>Addy</h1>
+    <p>I am 12 years old and love to babysit. I have experience babysitting family members and interacting with many kids. Other activities I love include soccer and volleyball. Andersen and I represent our class in our school student council. In school, I have great grades and am a good student. I am very excited to babysit! - Addy</p>
+    <a href="index.html" class="btn btn-primary">Back to Home</a>
+  </div>
+</body>
+</html>
