--- a/andersen.html
+++ b/andersen.html
@@ -1,2 +1,16 @@
 <!DOCTYPE html>
-<html><body><h1>Andersen's Bio</h1></body></html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Andersen - EP Sitters</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+  <div class="container mt-5">
+    <h1>Andersen</h1>
+    <p>I am 12 years old and have been babysitting for 1 year. I love to be in nature and I have a younger brother and sister, so I know how to take care of kids. I also play sports. These include softball and football.-Andersen</p>
+    <a href="index.html" class="btn btn-primary">Back to Home</a>
+  </div>
+</body>
+</html>
