--- a/eloise.html
+++ b/eloise.html
@@ -1,2 +1,16 @@
 <!DOCTYPE html>
-<html><body><h1>Eloise's Bio</h1></body></html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Eloise - EP Sitters</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+  <div class="container mt-5">
+    <h1>Eloise</h1>
+    <p>I am 12 years old and I love to help out with kids. I have been babysitting for 2 years and I have lots of experience. I have 2 younger brothers, (9 and 7), and two younger cousins (2 and 7 months), that I babysit for frequently. I am CPR and Heimlich certified. I can cook lots of food and I love to spend time with younger kids. - Eloise</p>
+    <a href="index.html" class="btn btn-primary">Back to Home</a>
+  </div>
+</body>
+</html>
