--- a/404.html
+++ b/404.html
@@ -1,41 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Not Found - EP Sitters</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>404 - Page Not Found | EP Sitters</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body { display: flex; align-items: center; justify-content: center; height: 100vh; margin: 0; background-color: #f8f9fa; }
+    .error-container { text-align: center; }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>EP Sitters</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="schedule.html">Schedule a Sitting</a></li>
-                <li class="dropdown">
-                    <a href="meet.html">Meet the Members</a>
-                    <div class="dropdown-content">
-                        <a href="ruby.html">Ruby D.</a>
-                        <a href="addy.html">Addy M.</a>
-                        <a href="eloise.html">Eloise S.</a>
-                        <a href="andersen.html">Andersen B.</a>
-                    </div>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <h2>Oops! Page Not Found</h2>
-            <p>Sorry, the page you are looking for does not exist. Please check the URL or return to the <a href="index.html">homepage</a>.</p>
-            <img src="images/404.jpg" alt="Page Not Found">
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 EP Sitters</p>
-    </footer>
-    <script src="scripts.js"></script>
+  <div class="error-container">
+    <h1 class="display-1">404</h1>
+    <p class="lead">Oops! The page you're looking for doesn't exist.</p>
+    <a href="index.html" class="btn btn-primary">Go Back Home</a>
+  </div>
 </body>
 </html>
