--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="EP Sitters - Babysitting Service by 6th Grade Girls from Edison Park, IL">
+  <meta name="description" content="EP Sitters - Babysitting Service by 6th Grade Girls from Edison Park serving Edison Park, Park Ridge and Niles">
   <title>EP Sitters - Babysitting Service</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
@@ -33,14 +33,14 @@
   <main class="container">
     <section id="home" class="text-center">
       <h1>Welcome to EP Sitters</h1>
-      <p>Babysitting service for Edison Park by 6th grade girls. $10 for the first kid and $5 for each additional kid.</p>
+      <p>Babysitting service for Edison Park by 6th grade girls. $10 for the first child and $5 for each additional child.</p>
       <img src="image-placeholder.jpg" class="img-fluid" alt="Babysitting Image">
     </section>
 
     <section id="about" class="mt-5">
       <h2>About Us</h2>
       <p>We have been a babysitting club since May of 2025. We are friends and have had experience with kids. We all have siblings and help around the house. We are Straight A students and try our best to please the customers. Welcome to EP Sitters!</p>
-      <p>Contact us at: <a href="mailto:epexample@gmail.com">epexample@gmail.com</a></p>
+      <p>Contact us at: <a href="mailto:contact@ep-sitters">contact@ep-sitters.com</a></p>
     </section>
 
     <section id="members" class="mt-5">
@@ -66,7 +66,7 @@
           <input type="number" class="form-control" id="childrenCount" required>
         </div>
         <div class="mb-3">
-          <label for="scheduleDate" class="form-label">Preferred Date</label>
+          <label for="scheduleDate" class="form-label">Date</label>
           <input type="date" class="form-control" id="scheduleDate" required>
         </div>
         <button type="submit" class="btn btn-success">Submit</button>
