--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="home" class="text-center">
       <h1>Welcome to EP Sitters</h1>
       <p>Babysitting service for Edison Park by 6th grade girls. $10 for the first child and $5 for each additional child.</p>
-      <img src="image/babysitting.jpg" class="img-fluid" alt="Babysitting Image">
+      <img src="image/sitters.jpg" class="img-fluid" alt="Babysitting Image">
     </section>
 
     <section id="about" class="mt-5">
