--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="EP Sitters - Babysitting Service by 6th Grade Girls from Edison Park serving Edison Park, Park Ridge and Niles">
+  <meta name="description" content="EP Sitters - Babysitting Service by 6th Grade Girls from Edison Park, IL">
   <title>EP Sitters - Babysitting Service</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
@@ -39,8 +39,8 @@
 
     <section id="about" class="mt-5">
       <h2>About Us</h2>
-      <p>We have been a babysitting club since May of 2025. We are friends and have had experience with kids. We all have siblings and help around the house. We are Straight A students and try our best to please the customers. Welcome to EP Sitters!</p>
-      <p>Contact us at: <a href="mailto:contact@ep-sitters">contact@ep-sitters.com</a></p>
+      <p>We have been a babysitting club since May of 2025. We are friends and have experience with kids. We all have siblings and help around the house. We are Straight A students and try our best to please the customers. Welcome to EP Sitters!</p>
+      <p>Contact us at: <a href="mailto:epexample@gmail.com">epexample@gmail.com</a></p>
     </section>
 
     <section id="members" class="mt-5">
@@ -56,21 +56,7 @@
     <section id="schedule" class="mt-5">
       <h2>Schedule a Sitting</h2>
       <p>$10 for the first kid and $5 for each additional kid.</p>
-      <form>
-        <div class="mb-3">
-          <label for="parentName" class="form-label">Parent's Name</label>
-          <input type="text" class="form-control" id="parentName" required>
-        </div>
-        <div class="mb-3">
-          <label for="childrenCount" class="form-label">Number of Children</label>
-          <input type="number" class="form-control" id="childrenCount" required>
-        </div>
-        <div class="mb-3">
-          <label for="scheduleDate" class="form-label">Date</label>
-          <input type="date" class="form-control" id="scheduleDate" required>
-        </div>
-        <button type="submit" class="btn btn-success">Submit</button>
-      </form>
+      <p>Contact us to schedule a sitting: <a href="mailto:contact@ep-sitters.com">contact@ep-sitters.com</a></p>
     </section>
   </main>
 
