--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
   <title>EP Sitters - Babysitting Service</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body { padding-top: 3rem; }
-    .navbar { margin-bottom: 2rem; }
-    footer { padding: 1rem 0; background-color: #f8f9fa; text-align: center; }
+    body { padding-top: 3rem; background-color: #f0f4f8; color: #333; }
+    .navbar { background-color: #6c63ff; }
+    .navbar a { color: #fff !important; }
+    footer { padding: 1rem 0; background-color: #6c63ff; color: #fff; text-align: center; }
+    .btn-primary { background-color: #ff6f61; border: none; }
+    .btn-primary:hover { background-color: #ff4f4f; }
+    h1, h2 { color: #6c63ff; }
+    a { color: #ff6f61; }
   </style>
 </head>
 <body>
