--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section id="about" class="mt-5">
       <h2>About Us</h2>
       <p>We have been a babysitting club since May of 2025. We are friends and have experience with kids. We all have siblings and help around the house. We are Straight A students and try our best to please the customers. Welcome to EP Sitters!</p>
-      <p>Contact us at: <a href="mailto:epexample@gmail.com">epexample@gmail.com</a></p>
+      <p>Contact us at: <a href="mailto:contact@ep-sitters.com">contact@ep-sitters.com</a></p>
     </section>
 
     <section id="members" class="mt-5">
