--- a/addy.html
+++ b/addy.html
@@ -5,6 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Addy - EP Sitters</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+    body { padding-top: 3rem; background-color: #f0f4f8; color: #333; }
+    .navbar { background-color: #6c63ff; }
+    .navbar a { color: #fff !important; }
+    footer { padding: 1rem 0; background-color: #6c63ff; color: #fff; text-align: center; }
+    .btn-primary { background-color: #ff6f61; border: none; }
+    .btn-primary:hover { background-color: #ff4f4f; }
+    h1, h2 { color: #6c63ff; }
+    a { color: #ff6f61; }
+  </style>
 </head>
 <body>
   <div class="container mt-5">
