--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     body { padding-top: 3rem; background-color: #f0f4f8; color: #333; }
     .navbar { background-color: #6c63ff; }
-    .navbar a { color: #fff !important; }
+    .navbar a { color: #ff6f61 !important; }
     footer { padding: 1rem 0; background-color: #6c63ff; color: #fff; text-align: center; }
     .btn-primary { background-color: #ff6f61; border: none; }
     .btn-primary:hover { background-color: #ff4f4f; }
