--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 
   <main class="container">
     <section id="home" class="text-center">
-      <h1>Welcome to EP Sitters</h1>
-      <p>Babysitting service for Edison Park by 6th grade girls. $10 for the first child and $5 for each additional child.</p>
-      <img src="images/sitters.jpg" class="img-fluid" alt="Babysitting Image">
+      <h1>Welcome to Edison Park Sitters Club</h1>
+      <h2>Babysitting service for Edison Park, Niles and Park Ridge by trained & experienced 6th grade girls for 1+ year olds.</h2>
+      <img src="images/sitters.jpg" style="height:125px;width:auto;" alt="Babysitting Image">
     </section>
 
     <section id="about" class="mt-5">
       <h2>About Us</h2>
-      <p>We have been a babysitting club since May of 2025. We are friends and have experience with kids. We all have siblings and help around the house. We are Straight A students and try our best to please the customers. Welcome to EP Sitters!</p>
+      <p>We have been a babysitting club since May of 2025. We are friends and have experience with kids. We all have siblings and help around the house. We are Straight A students and try our best to accomodate your needs and put safety first. Welcome to EP Sitters!</p>
       <p>Contact us at: <a href="mailto:contact@ep-sitters.com">contact@ep-sitters.com</a></p>
     </section>
 
