--- a/andersen.html
+++ b/andersen.html
@@ -18,6 +18,7 @@
 </head>
 <body>
   <div class="container mt-5">
+    <img src="images/placeholder.jpg" style="height:125px;width:auto;" alt="Babysitter Image">
     <h1>Andersen</h1>
     <p>I am 12 years old and have been babysitting for 1 year. I love to be in nature and I have a younger brother and sister, so I know how to take care of kids. I also play sports. These include softball and football.-Andersen</p>
     <a href="index.html" class="btn btn-primary">Back to Home</a>
