--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
           <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
           <li class="nav-item"><a class="nav-link" href="#members">Meet the Members</a></li>
-          <li class="nav-item"><a class="nav-link" href="#schedule">Schedule a Sitting</a></li>
+          <li class="nav-item"><a class="nav-link" href="#rates">Rates</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
         </ul>
       </div>
     </div>
@@ -37,15 +38,14 @@
 
   <main class="container">
     <section id="home" class="text-center">
-      <h1>Welcome to Edison Park Sitters Club</h1>
-      <h2>Babysitting service for Edison Park, Niles and Park Ridge by trained & experienced 6th grade girls for 1+ year olds.</h2>
+      <h1>Welcome to the Edison Park Sitters Club!</h1>
+      <h2>We offer babysitting services to 1+ year olds in Edison Park, Niles and Park Ridge.  We are trained & experienced 6th grade girls.</h2>
       <img src="images/sitters.jpg" style="height:125px;width:auto;" alt="Babysitting Image">
     </section>
 
     <section id="about" class="mt-5">
       <h2>About Us</h2>
-      <p>We have been a babysitting club since May of 2025. We are friends and have experience with kids. We all have siblings and help around the house. We are Straight A students and try our best to accomodate your needs and put safety first. Welcome to EP Sitters!</p>
-      <p>Contact us at: <a href="mailto:contact@ep-sitters.com">contact@ep-sitters.com</a></p>
+      <h4>We have been a babysitting club since May of 2025. We are friends and have experience with kids. We all have siblings and help around the house. We are Straight A students and try our best to accomodate your needs and put safety first. Welcome to EP Sitters!</h4>
     </section>
 
     <section id="members" class="mt-5">
@@ -58,15 +58,19 @@
       </div>
     </section>
 
-    <section id="schedule" class="mt-5">
-      <h2>Schedule a Sitting</h2>
-      <p>$10 for the first kid and $5 for each additional kid.</p>
-      <p>Contact us to schedule a sitting: <a href="mailto:contact@ep-sitters.com">contact@ep-sitters.com</a></p>
+    <section id="rates" class="mt-5">
+      <h2>Our Rates</h2>
+      <h4>$10 for the first kid and $5 for each additional kid.</h4>
+    </section>
+    
+    <section id="contact" class="mt-5">
+      <h2>Contact Us</h2>
+      <h4>Please contact us by email to schedule a sitting or with any questions: <a href="mailto:contact@ep-sitters.com">contact@ep-sitters.com</a>.  Someone should respond within 24 hours.</h4>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 EP Sitters</p>
+    <p>&copy; 2025 Edison Park Sitters Club | <a href="mailto:contact@ep-sitters.com">contact@ep-sitters.com</a> </p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
