--- a/ruby.html
+++ b/ruby.html
@@ -23,5 +23,8 @@
     <p>I am 12 years old and am in 6th grade. I have 3 brothers (7, 4, and 4) and my dog Rosie. In my free time, I like to play softball and draw. I have been babysitting for about 2 years now and I am babysitter safe. I went to a 4-hour class that taught us how to do CPR, Heimlich, and what to do in case of an emergency. I am a social person and I know how to communicate my thoughts and ideas. I can't wait to meet you! - Ruby</p>
     <a href="index.html" class="btn btn-primary">Back to Home</a>
   </div>
+    <footer>
+    <p>&copy; 2025 Edison Park Sitters Club | <a href="mailto:contact@ep-sitters.com">contact@ep-sitters.com</a> </p>
+  </footer>
 </body>
 </html>
