--- a/addy.html
+++ b/addy.html
@@ -19,9 +19,12 @@
 <body>
   <div class="container mt-5">
     <img src="images/placeholder.jpg" style="height:125px;width:auto;" alt="Babysitter Image">
-    <h1>Addy</h1>
+    <h1>Addy M.</h1>
     <p>I am 12 years old and love to babysit. I have experience babysitting family members and interacting with many kids. Other activities I love include soccer and volleyball. Andersen and I represent our class in our school student council. In school, I have great grades and am a good student. I am very excited to babysit! - Addy</p>
     <a href="index.html" class="btn btn-primary">Back to Home</a>
   </div>
 </body>
+    <footer>
+    <p>&copy; 2025 Edison Park Sitters Club | <a href="mailto:contact@ep-sitters.com">contact@ep-sitters.com</a> </p>
+  </footer>
 </html>
