--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     .btn-primary { background-color: #ff6f61; border: none; }
     .btn-primary:hover { background-color: #ff4f4f; }
     h1, h2 { color: #6c63ff; }
+    h4 { color: #4db8ff; }
     a { color: #ff6f61; }
   </style>
 </head>
@@ -39,7 +40,7 @@
   <main class="container">
     <section id="home" class="text-center">
       <h1>Welcome to the Edison Park Sitters Club!</h1>
-      <h2>We offer babysitting services to 1+ year olds in Edison Park, Niles and Park Ridge.  We are trained & experienced 6th grade girls.</h2>
+      <h4>We offer babysitting services to 1+ year olds in Edison Park, Niles and Park Ridge.  We are trained & experienced 6th grade girls.</h4>
       <img src="images/sitters.jpg" style="height:125px;width:auto;" alt="Babysitting Image">
     </section>
 
@@ -59,8 +60,19 @@
     </section>
 
     <section id="rates" class="mt-5">
-      <h2>Our Rates</h2>
-      <h4>$10 for the first kid and $5 for each additional kid.</h4>
+      <h2>Our Hourly Rates</h2>
+      <ul>
+        <li>
+          <h4>First 2 hours: $20 for the first child and $5 for each additional child.</h4>
+        </li>
+        <li>
+          <h4>Next 4 hours: $10 for the first child and $3 for each additional child.</h4>
+          </li>
+        <li>
+          <h4>Additional hours: $15.</h4>
+          </li>
+        
+      </ul>
     </section>
     
     <section id="contact" class="mt-5">
