--- a/ruby.html
+++ b/ruby.html
@@ -13,6 +13,7 @@
     .btn-primary { background-color: #ff6f61; border: none; }
     .btn-primary:hover { background-color: #ff4f4f; }
     h1, h2 { color: #6c63ff; }
+    h4 { color: "red"; }
     a { color: #ff6f61; }
   </style>
 </head>
@@ -20,7 +21,7 @@
   <div class="container mt-5">
     <img src="images/placeholder.jpg" style="height:125px;width:auto;" alt="Babysitter Image">
     <h1>Ruby D.</h1>
-    <p>I am 12 years old and am in 6th grade. I have 3 brothers (7, 4, and 4) and my dog Rosie. In my free time, I like to play softball and draw. I have been babysitting for about 2 years now and I am babysitter safe. I went to a 4-hour class that taught us how to do CPR, Heimlich, and what to do in case of an emergency. I am a social person and I know how to communicate my thoughts and ideas. I can't wait to meet you! - Ruby</p>
+    <h4>I am 12 years old and am in 6th grade. I have 3 brothers (7, 4, and 4) and my dog Rosie. In my free time, I like to play softball and draw. I have been babysitting for about 2 years now and I am babysitter safe. I went to a 4-hour class that taught us how to do CPR, Heimlich, and what to do in case of an emergency. I am a social person and I know how to communicate my thoughts and ideas. I can't wait to meet you! - Ruby</h4>
     <a href="index.html" class="btn btn-primary">Back to Home</a>
   </div>
     <footer>
