--- a/ruby.html
+++ b/ruby.html
@@ -13,7 +13,7 @@
     .btn-primary { background-color: #ff6f61; border: none; }
     .btn-primary:hover { background-color: #ff4f4f; }
     h1, h2 { color: #6c63ff; }
-    h4 { color: "red"; }
+    h4 { color: #FF0000; }
     a { color: #ff6f61; }
   </style>
 </head>
