--- a/addy.html
+++ b/addy.html
@@ -13,6 +13,7 @@
     .btn-primary { background-color: #ff6f61; border: none; }
     .btn-primary:hover { background-color: #ff4f4f; }
     h1, h2 { color: #6c63ff; }
+      h4 { color: #4db8ff; }
     a { color: #ff6f61; }
   </style>
 </head>
@@ -20,7 +21,7 @@
   <div class="container mt-5">
     <img src="images/placeholder.jpg" style="height:125px;width:auto;" alt="Babysitter Image">
     <h1>Addy M.</h1>
-    <p>I am 12 years old and love to babysit. I have experience babysitting family members and interacting with many kids. Other activities I love include soccer and volleyball. Andersen and I represent our class in our school student council. In school, I have great grades and am a good student. I am very excited to babysit! - Addy</p>
+    <h4>I am 12 years old and love to babysit. I have experience babysitting family members and interacting with many kids. Other activities I love include soccer and volleyball. Andersen and I represent our class in our school student council. In school, I have great grades and am a good student. I am very excited to babysit!<br></h4>
     <a href="index.html" class="btn btn-primary">Back to Home</a>
   </div>
 </body>
