--- a/andersen.html
+++ b/andersen.html
@@ -13,6 +13,7 @@
     .btn-primary { background-color: #ff6f61; border: none; }
     .btn-primary:hover { background-color: #ff4f4f; }
     h1, h2 { color: #6c63ff; }
+    h4 { color: #6c63ff }
     a { color: #ff6f61; }
   </style>
 </head>
@@ -20,7 +21,7 @@
   <div class="container mt-5">
     <img src="images/placeholder.jpg" style="height:125px;width:auto;" alt="Babysitter Image">
     <h1>Andersen B.</h1>
-    <p>I am 12 years old and have been babysitting for 1 year. I love to be in nature and I have a younger brother and sister, so I know how to take care of kids. I also play sports. These include softball and football.-Andersen</p>
+    <h4>I am 12 years old and have been babysitting for 1 year. I love to be in nature and I have a younger brother and sister, so I know how to take care of kids. I also play sports. These include softball and football.</h4>
     <a href="index.html" class="btn btn-primary">Back to Home</a>
   </div>
 </body>
