--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     .btn-primary { background-color: #ff6f61; border: none; }
     .btn-primary:hover { background-color: #ff4f4f; }
     h1, h2 { color: #6c63ff; }
+    h3 { color: #FFA500; }
     h4 { color: #4db8ff; }
     a { color: #ff6f61; }
   </style>
@@ -21,7 +22,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="#">EP Sitters</a>
+      
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -40,7 +41,7 @@
   <main class="container">
     <section id="home" class="text-center">
       <h1>Welcome to the Edison Park Sitters Club!</h1>
-      <h4>We offer babysitting services to 1+ year olds in Edison Park, Niles and Park Ridge.  We are trained & experienced 6th grade girls.</h4>
+      <h3>We offer babysitting services to 1+ year olds in Edison Park, Niles and Park Ridge.  We are trained & experienced 6th grade girls.</h3>
       <img src="images/sitters.jpg" style="height:125px;width:auto;" alt="Babysitting Image">
     </section>
 
