--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     <section id="members" class="mt-5">
       <h2>Meet the Members</h2>
       <div class="row">
-        <div class="col-md-3"><a href="ruby.html" class="btn btn-primary">Ruby</a></div>
-        <div class="col-md-3"><a href="addy.html" class="btn btn-primary">Addy</a></div>
-        <div class="col-md-3"><a href="eloise.html" class="btn btn-primary">Eloise</a></div>
-        <div class="col-md-3"><a href="andersen.html" class="btn btn-primary">Andersen</a></div>
+        <div class="col-md-3"><a href="addy.html" class="btn btn-primary btn-lg">Addy</a></div>
+        <div class="col-md-3"><a href="ruby.html" class="btn btn-primary btn-lg">Ruby</a></div>
+        <div class="col-md-3"><a href="eloise.html" class="btn btn-primary btn-lg">Eloise</a></div>
+        <div class="col-md-3"><a href="andersen.html" class="btn btn-primary btn-lg">Andersen</a></div>
       </div>
     </section>
 
