--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <main class="container">
     <section id="home" class="text-center">
       <h1>Welcome to the Edison Park Sitters Club!</h1>
-      <h3>We offer babysitting services to 1+ year olds in Edison Park, Niles and Park Ridge.  We are trained & experienced 6th grade girls.</h3>
+      <h3>We offer babysitting services to 1+ year olds in Edison Park, Niles and Park Ridge.  We are responsible trained & experienced 6th grade girls.  Have an evening out and leave your children in good hands!</h3>
       <img src="images/sitters.jpg" style="height:125px;width:auto;" alt="Babysitting Image">
     </section>
 
