--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </section>
 
     <section id="rates" class="mt-5">
-      <h2>Our Hourly Rates</h2>
+      <h2>Our Hourly Rates (Cash Only)</h2>
       <ul>
         <li>
           <h4>First 2 hours: $20 for the first child and $5 for each additional child.</h4>
