--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
     <section id="about" class="mt-5">
       <h2>About Us</h2>
-      <h4>We have been a babysitting club since May of 2025. We are friends and have experience with kids. We all have siblings and help around the house. We are Straight A students and try our best to accomodate your needs and put safety first. Welcome to EP Sitters!</h4>
+      <h4>We have been a babysitting club since May of 2025. We are friends and have experience with kids. We all have siblings and help around the house. We are Straight A students and try our best to accomodate your needs and put safety first. Thanks for considering us!</h4>
     </section>
 
     <section id="members" class="mt-5">
-      <h2>Meet the Members</h2>
+      <h2>Meet Our Members</h2>
       <div class="row">
         <div class="col-md-3"><a href="addy.html" class="btn btn-primary btn-lg">Addy</a></div>
         <div class="col-md-3"><a href="ruby.html" class="btn btn-primary btn-lg">Ruby</a></div>
