--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
-          <li class="nav-item"><a class="nav-link" href="#members">Meet the Members</a></li>
+          <li class="nav-item"><a class="nav-link" href="#sitters">Meet the Sitters</a></li>
           <li class="nav-item"><a class="nav-link" href="#rates">Rates</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
         </ul>
@@ -50,8 +50,8 @@
       <h4>We have been a babysitting club since May of 2025. We are friends and have experience with kids. We all have siblings and help around the house. We are Straight A students and try our best to accomodate your needs and put safety first. Thanks for considering us!</h4>
     </section>
 
-    <section id="members" class="mt-5">
-      <h2>Meet Our Members</h2>
+    <section id="sitters" class="mt-5">
+      <h2>Meet the Sitters</h2>
       <div class="row">
         <div class="col-md-3"><a href="addy.html" class="btn btn-primary btn-lg">Addy</a></div>
         <div class="col-md-3"><a href="ruby.html" class="btn btn-primary btn-lg">Ruby</a></div>
