--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     
     <section id="contact" class="mt-5">
       <h2>Contact Us</h2>
-      <h4>Please contact us by email to schedule a sitting or with any questions: <a href="mailto:contact@ep-sitters.com">contact@ep-sitters.com</a>.  Someone should respond within 24 hours.</h4>
+      <h4>Please contact us by email to request a sitting or with any questions: <a href="mailto:contact@ep-sitters.com">contact@ep-sitters.com</a>.  If requesting services, please include dates, times, and info on your children along with your name and phone number.  Someone should respond within 24 hours by email or phone.</h4>
     </section>
   </main>
 
