--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <section id="about" class="mt-5">
       <h2>About Us</h2>
-      <h4>We have been a babysitting club since May of 2025. We are friends and have experience with kids. We all have siblings and help around the house. We are Straight A students and try our best to accomodate your needs and put safety first. Thanks for considering us!</h4>
+      <h4>We are best friends and each have experience watching kids. We all have siblings and help around the house. We are Straight A students and try our best to accomodate your needs and always put safety first. Thanks for considering us!</h4>
     </section>
 
     <section id="sitters" class="mt-5">
