--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 
   <main class="container">
     <section id="home" class="text-center">
-      <h1>Welcome to the Edison Park Sitters Club!</h1>
-      <h3>We offer babysitting services to 1+ year olds in Edison Park, Niles and Park Ridge.  We are responsible trained & experienced 6th grade girls.  Have an evening out and leave your children in good hands!</h3>
-      <img src="images/sitters.jpg" style="height:125px;width:auto;" alt="Babysitting Image">
+      <h1>Welcome to the Edison Park Baby-Sitters Club!</h1>
+      <h3>We offer babysitting services to 1+ year olds in Edison Park, Niles and Park Ridge.  We are responsible trained & experienced 6th graders.  Have an evening out and leave your children in good hands!</h3>
+      <img src="images/sitters.jpg" style="height:175px;width:auto;" alt="Babysitting Image">
     </section>
 
     <section id="about" class="mt-5">
       <h2>About Us</h2>
-      <h4>We are best friends and each have experience watching kids. We all have siblings and help around the house. We are Straight A students and try our best to accomodate your needs and always put safety first. Thanks for considering us!</h4>
+      <h4>We are best friends and each have experience watching kids. We all have siblings and help around the house. We are Straight A students and try our best to accomodate your needs and always put safety first. Contact us to see if one of us will be available to babysit when you need us. Thanks for considering us!</h4>
     </section>
 
     <section id="sitters" class="mt-5">
