--- a/ruby.html
+++ b/ruby.html
@@ -25,7 +25,7 @@
     <a href="index.html" class="btn btn-primary">Back to Home</a>
   </div>
     <footer>
-    <p>&copy; 2025 Edison Park Sitters Club | <a href="mailto:contact@ep-sitters.com">contact@ep-sitters.com</a> </p>
+    <p>&copy; 2025 Edison Park Baby-Sitters Club | <a href="mailto:contact@ep-sitters.com">contact@ep-sitters.com</a> </p>
   </footer>
 </body>
 </html>
