--- a/index.html
+++ b/index.html
@@ -64,15 +64,14 @@
       <h2>Hourly Rates (Cash Only)</h2>
       <ul>
         <li>
-          <h4>First 2 hours: $20 for the first child and $5 for each additional child.</h4>
+          <h4>First 2 hours: $20 for the first child and $5 for each additional child per hour.</h4>
         </li>
         <li>
-          <h4>Next 4 hours: $15 for the first child and $3 for each additional child.</h4>
+          <h4>Next 4 hours: $15 for the first child and $3 for each additional child per hour.</h4>
           </li>
         <li>
-          <h4>Additional hours: $15.</h4>
+          <h4>Additional hours: $15 per hour.</h4>
           </li>
-        
       </ul>
       
     </section>
