--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </main>
 
     <section id="from_the_parents" class="mt-5">
-      <h2>        <div class="col-md-3"><a href="from_the_parents.html" class="btn btn-primary btn-lg btn-success">Eloise</a></div></h2>  
+      <h2>        <div class="col-md-3"><a href="from_the_parents.html" class="btn btn-primary btn-lg btn-success">Important Information From the Parents</a></div></h2>  
     </section>
 
   <footer>
