--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </section>
 
     <section id="from_the_parents" class="mt-5">
-      <h2>        <div class="col-md-3"><a href="from_the_parents.html" class="btn btn-lg btn-success">Important Information From the Parents</a></div></h2>  
+      <h2>        <div class="col-md-3"><a href="from_the_parents.html" class="btn btn-lg btn-success">From the Sitters-Club Parents</a></div></h2>  
     </section>
 
      </main>
