--- a/from_the_parents.html
+++ b/from_the_parents.html
@@ -73,7 +73,7 @@
   <section class="container my-5 text-center">
     <h2 class="section-title">Empowering Young Leaders</h2>
     <p>This club is more than just a service—it's a way for these young entrepreneurs to learn, grow, and serve. With their parents’ support, you can feel confident knowing your children are in kind, capable hands.</p>
-    <a href="#contact" class="btn btn-primary mt-3">Get in Touch</a>
+    <a href="index.html" class="btn btn-primary">Back to Home</a>
   </section>
 
   <!-- Footer -->
