--- a/from_the_parents.html
+++ b/from_the_parents.html
@@ -36,7 +36,7 @@
   <!-- About the Club -->
   <section class="container my-5">
     <h2 class="section-title text-center">About the Club</h2>
-    <p>The Baby Sitters Club is a babysitting service run by a group of responsible, kind-hearted 12-year-old girls who love caring for children. While this club is their idea and they are the primary operators, their parents play a key role in making sure every experience is smooth, safe, and enjoyable for both the children and their families.</p>
+    <p>The Baby Sitters Club is a babysitting service run by a group of responsible, kind-hearted 12-year-old girls who love caring for children. While this club is their idea and they are the primary operators, their parents play a key role in making sure every experience is smooth, safe, and enjoyable for both their children and your families.</p>
   </section>
 
   <!-- Parental Involvement -->
