--- a/index.html
+++ b/index.html
@@ -62,16 +62,13 @@
     </section>
 
     <section id="rates" class="mt-5">
-      <h2>Hourly Rates (Cash Only)</h2>
+      <h2>Hourly Cash Rates - Max 4 children</h2>
       <ul>
         <li>
-          <h4>First 2 hours: $20 for the first child and $5 for each additional child per hour.</h4>
+          <h4>First hour: $15.</h4>
         </li>
         <li>
-          <h4>Next 2 hours: $15 for the first child and $3 for each additional child per hour.</h4>
-          </li>
-        <li>
-          <h4>Additional hours: $15 per hour.</h4>
+          <h4>Additional hours: $15 for the first 2 children and $3 for each additional child.</h4>
           </li>
       </ul>
       
