--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
           <li class="nav-item"><a class="nav-link" href="#sitters">Meet the Sitters</a></li>
-          <li class="nav-item"><a class="nav-link" href="#rates">Hourly Rates</a></li>
+          <li class="nav-item"><a class="nav-link" href="#rates">Rates</a></li>
           <li class="nav-item"><a class="nav-link" href="from_the_parents.html">From the Sitters Club Parents</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
         </ul>
@@ -62,7 +62,7 @@
     </section>
 
     <section id="rates" class="mt-5">
-      <h2>Hourly Cash Rates - Max 4 children</h2>
+      <h2>Cash Rates - Maximums: 4 children / 4 hours</h2>
       <ul>
         <li>
           <h4>First hour: $15.</h4>
