--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
     a { color: #ff6f61; }
   </style>
 </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WR2PEHTKLR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WR2PEHTKLR');
+</script>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
