--- a/addy.html
+++ b/addy.html
@@ -28,7 +28,7 @@
 </script>
 <body>
   <div class="container mt-5">
-    <img src="images/placeholder.jpg" style="height:125px;width:auto;" alt="Babysitter Image">
+    <img src="images/addy.jpg" style="height:125px;width:auto;" alt="Babysitter Image">
     <h1>Addy M.</h1>
     <h4>I am 12 years old and love to babysit. I have experience babysitting family members and interacting with many kids. Other activities I love include soccer and volleyball. Andersen and I represent our class in our school student council. In school, I have great grades and am a good student. I am very excited to babysit!<br></h4>
     <a href="index.html" class="btn btn-primary">Back to Home</a>
