--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section id="home" class="text-center">
       <h1>Welcome to the Edison Park Baby-Sitters Club!</h1>
       <h3>We offer babysitting services to 1+ year olds in Edison Park, Niles and Park Ridge.  We are trained, experienced & responsible 6th graders.  Have an evening out and leave your children in good hands!</h3>
-      <img src="images/logo.png" style="height:auto;width:75%;" alt="Babysitters">
+      <img src="images/logo.png" height="auto" width="75%" alt="Babysitters">
     </section>
 
     <section id="about" class="mt-5">
