--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <h4>First hour: $20.</h4>
         </li>
         <li>
-          <h4>Additional hours: $15 for the first 2 children and $3 for each additional child.</h4>
+          <h4>Additional hours: $15 for the first child and $2 for each additional child.</h4>
           </li>
       </ul>
       
