--- a/ruby.html
+++ b/ruby.html
@@ -30,7 +30,7 @@
   <div class="container mt-5">
     <img src="images/ruby.jpg" style="height:325px;width:auto;" alt="Babysitter Image">
     <h1>Ruby D.</h1>
-    <h4>I am 12 years old and am in 6th grade. I have 3 brothers (7, 4 and 4) and my dog Rosie. In my free time I like to play softball and spend time with my friends.  I have been babysitting for about 2 years now and I am babysitter safe. I went to a 4 hour class that taught us how to do CPR, Heimlich, and what to do in case of an emergency. I have also been a Junior Camp Counselor for the past three years and I will continue to do so. I have made a connection with the kids, and who knows they may already know me! I am a social person and I know how to communicate my thoughts and ideas. I can't wait to meet you!<br></h4>
+    <h4>I am 13 years old and am in 7th grade. I have 3 brothers (8, 5 and 5) and my dog Rosie. In my free time I like to play softball and spend time with my friends.  I have been babysitting for about 3 years now and I am babysitter safe. I went to a 4 hour class that taught us how to do CPR, Heimlich, and what to do in case of an emergency. I have also been a Junior Camp Counselor for the past four years and I will continue to do so. I have made a connection with the kids, and who knows they may already know me! I am a social person and I know how to communicate my thoughts and ideas. I can't wait to meet you!<br></h4>
     <a href="index.html" class="btn btn-primary">Back to Home</a>
   </div>
     <footer>
